improved and updated all token tests