@@ -22,6 +22,7 @@ import net.luis.utils.io.token.rule.TokenRuleMatch;
 import net.luis.utils.io.token.rule.rules.TokenRules;
 import net.luis.utils.io.token.tokens.SimpleToken;
 import net.luis.utils.io.token.tokens.Token;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -36,42 +37,269 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class WrapTokenActionTest {
 	
-	private static final Token PREFIX_TOKEN = SimpleToken.createUnpositioned("("::equals, "(");
-	private static final Token SUFFIX_TOKEN = SimpleToken.createUnpositioned(")"::equals, ")");
-	private static final Token CONTENT_TOKEN = SimpleToken.createUnpositioned("abc"::equals, "abc");
-	private static final List<Token> TEST_TOKENS = List.of(CONTENT_TOKEN);
-	
-	private static final TokenRuleMatch TEST_MATCH = new TokenRuleMatch(0, 1, TEST_TOKENS, TokenRules.alwaysMatch());
-	private static final TokenRuleMatch EMPTY_MATCH = new TokenRuleMatch(0, 0, Collections.emptyList(), TokenRules.alwaysMatch());
-	
-	@Test
-	void constructor() {
-		assertThrows(NullPointerException.class, () -> new WrapTokenAction(null, SUFFIX_TOKEN));
-		assertThrows(NullPointerException.class, () -> new WrapTokenAction(PREFIX_TOKEN, null));
+	private static @NotNull Token createToken(@NotNull String value) {
+		return SimpleToken.createUnpositioned(word -> word.equals(value), value);
 	}
 	
 	@Test
-	void prefixToken() {
-		assertEquals(PREFIX_TOKEN, new WrapTokenAction(PREFIX_TOKEN, SUFFIX_TOKEN).prefixToken());
+	void constructorWithNullPrefixToken() {
+		Token suffix = createToken(")");
+		
+		assertThrows(NullPointerException.class, () -> new WrapTokenAction(null, suffix));
 	}
 	
 	@Test
-	void suffixToken() {
-		assertEquals(SUFFIX_TOKEN, new WrapTokenAction(PREFIX_TOKEN, SUFFIX_TOKEN).suffixToken());
+	void constructorWithNullSuffixToken() {
+		Token prefix = createToken("(");
+		
+		assertThrows(NullPointerException.class, () -> new WrapTokenAction(prefix, null));
 	}
 	
 	@Test
-	void apply() {
-		WrapTokenAction action = new WrapTokenAction(PREFIX_TOKEN, SUFFIX_TOKEN);
+	void constructorWithValidTokens() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		
+		assertDoesNotThrow(() -> new WrapTokenAction(prefix, suffix));
+	}
+	
+	@Test
+	void prefixTokenReturnsCorrectValue() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		
+		assertEquals(prefix, action.prefixToken());
+	}
+	
+	@Test
+	void suffixTokenReturnsCorrectValue() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		
+		assertEquals(suffix, action.suffixToken());
+	}
+	
+	@Test
+	void applyWithNullMatch() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		
 		assertThrows(NullPointerException.class, () -> action.apply(null));
+	}
+	
+	@Test
+	void applyWithEmptyTokenList() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		TokenRuleMatch match = new TokenRuleMatch(0, 0, Collections.emptyList(), TokenRules.alwaysMatch());
 		
-		List<Token> result = action.apply(TEST_MATCH);
+		List<Token> result = action.apply(match);
+		
+		assertTrue(result.isEmpty());
+	}
+	
+	@Test
+	void applyWithSingleToken() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token content = createToken("content");
+		List<Token> tokens = List.of(content);
+		TokenRuleMatch match = new TokenRuleMatch(0, 1, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
 		assertEquals(3, result.size());
-		assertEquals(PREFIX_TOKEN, result.getFirst());
-		assertEquals(CONTENT_TOKEN, result.get(1));
-		assertEquals(SUFFIX_TOKEN, result.getLast());
+		assertEquals(prefix, result.get(0));
+		assertEquals(content, result.get(1));
+		assertEquals(suffix, result.get(2));
+		assertEquals("(", result.get(0).value());
+		assertEquals("content", result.get(1).value());
+		assertEquals(")", result.get(2).value());
+	}
+	
+	@Test
+	void applyWithMultipleTokens() {
+		Token prefix = createToken("[");
+		Token suffix = createToken("]");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token token1 = createToken("hello");
+		Token token2 = createToken("world");
+		List<Token> tokens = List.of(token1, token2);
+		TokenRuleMatch match = new TokenRuleMatch(0, 2, tokens, TokenRules.alwaysMatch());
 		
-		List<Token> emptyResult = action.apply(EMPTY_MATCH);
-		assertTrue(emptyResult.isEmpty());
+		List<Token> result = action.apply(match);
+		
+		assertEquals(4, result.size());
+		assertEquals(prefix, result.get(0));
+		assertEquals(token1, result.get(1));
+		assertEquals(token2, result.get(2));
+		assertEquals(suffix, result.get(3));
+		assertEquals("[", result.get(0).value());
+		assertEquals("hello", result.get(1).value());
+		assertEquals("world", result.get(2).value());
+		assertEquals("]", result.get(3).value());
+	}
+	
+	@Test
+	void applyWithDifferentWrapperTokens() {
+		Token prefix = createToken("START");
+		Token suffix = createToken("END");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token content = createToken("middle");
+		List<Token> tokens = List.of(content);
+		TokenRuleMatch match = new TokenRuleMatch(0, 1, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(3, result.size());
+		assertEquals("START", result.get(0).value());
+		assertEquals("middle", result.get(1).value());
+		assertEquals("END", result.get(2).value());
+	}
+	
+	@Test
+	void applyWithSamePrefixAndSuffix() {
+		Token wrapper = createToken("\"");
+		WrapTokenAction action = new WrapTokenAction(wrapper, wrapper);
+		Token content = createToken("quoted");
+		List<Token> tokens = List.of(content);
+		TokenRuleMatch match = new TokenRuleMatch(0, 1, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(3, result.size());
+		assertEquals("\"", result.get(0).value());
+		assertEquals("quoted", result.get(1).value());
+		assertEquals("\"", result.get(2).value());
+		assertSame(wrapper, result.get(0));
+		assertSame(wrapper, result.get(2));
+	}
+	
+	@Test
+	void applyWithNumericTokens() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token num1 = createToken("1");
+		Token num2 = createToken("2");
+		Token num3 = createToken("3");
+		List<Token> tokens = List.of(num1, num2, num3);
+		TokenRuleMatch match = new TokenRuleMatch(0, 3, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(5, result.size());
+		assertEquals("(", result.get(0).value());
+		assertEquals("1", result.get(1).value());
+		assertEquals("2", result.get(2).value());
+		assertEquals("3", result.get(3).value());
+		assertEquals(")", result.get(4).value());
+	}
+	
+	@Test
+	void applyWithSpecialCharacterTokens() {
+		Token prefix = createToken("<");
+		Token suffix = createToken(">");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token special1 = createToken("@");
+		Token special2 = createToken("#");
+		List<Token> tokens = List.of(special1, special2);
+		TokenRuleMatch match = new TokenRuleMatch(0, 2, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(4, result.size());
+		assertEquals("<", result.get(0).value());
+		assertEquals("@", result.get(1).value());
+		assertEquals("#", result.get(2).value());
+		assertEquals(">", result.get(3).value());
+	}
+	
+	@Test
+	void applyWithDifferentMatchIndices() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token content = createToken("test");
+		List<Token> tokens = List.of(content);
+		TokenRuleMatch match = new TokenRuleMatch(5, 6, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(3, result.size());
+		assertEquals("(", result.get(0).value());
+		assertEquals("test", result.get(1).value());
+		assertEquals(")", result.get(2).value());
+	}
+	
+	@Test
+	void applyPreservesOriginalTokens() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token original = createToken("original");
+		List<Token> tokens = List.of(original);
+		TokenRuleMatch match = new TokenRuleMatch(0, 1, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(3, result.size());
+		assertSame(prefix, result.get(0));
+		assertSame(original, result.get(1));
+		assertSame(suffix, result.get(2));
+	}
+	
+	@Test
+	void applyResultIsUnmodifiable() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		Token content = createToken("test");
+		List<Token> tokens = List.of(content);
+		TokenRuleMatch match = new TokenRuleMatch(0, 1, tokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertThrows(UnsupportedOperationException.class, () -> result.add(createToken("new")));
+		assertThrows(UnsupportedOperationException.class, result::removeFirst);
+		assertThrows(UnsupportedOperationException.class, result::clear);
+		assertThrows(UnsupportedOperationException.class, () -> result.set(0, createToken("replacement")));
+	}
+	
+	@Test
+	void applyWithLongTokenSequence() {
+		Token prefix = createToken("{");
+		Token suffix = createToken("}");
+		WrapTokenAction action = new WrapTokenAction(prefix, suffix);
+		List<Token> manyTokens = List.of(
+			createToken("a"), createToken("b"), createToken("c"), createToken("d"), createToken("e")
+		);
+		TokenRuleMatch match = new TokenRuleMatch(0, 5, manyTokens, TokenRules.alwaysMatch());
+		
+		List<Token> result = action.apply(match);
+		
+		assertEquals(7, result.size());
+		assertEquals("{", result.get(0).value());
+		assertEquals("a", result.get(1).value());
+		assertEquals("b", result.get(2).value());
+		assertEquals("c", result.get(3).value());
+		assertEquals("d", result.get(4).value());
+		assertEquals("e", result.get(5).value());
+		assertEquals("}", result.get(6).value());
+	}
+	
+	@Test
+	void equalActionsHaveSameHashCode() {
+		Token prefix = createToken("(");
+		Token suffix = createToken(")");
+		WrapTokenAction action1 = new WrapTokenAction(prefix, suffix);
+		WrapTokenAction action2 = new WrapTokenAction(prefix, suffix);
+		
+		assertEquals(action1.hashCode(), action2.hashCode());
 	}
 }
